# Neural_Observatory

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: basic.py  embedding.py
neural_observatory/: __init__.py  observatory.py
neural_observatory/analysis/: __init__.py  activation_statistics.py  anomaly_detection.py  attention_health.py  base.py  dead_neurons.py  embedding_drift.py  gradient_health.py  neural_collapse.py  parameter_health.py
neural_observatory/collectors/: __init__.py  activation_collector.py  base.py  gradient_collector.py  metadata_collector.py  parameter_collector.py
neural_observatory/core/: __init__.py  configuration.py  events.py  lifecycle.py  registry.py
neural_observatory/hooks/: __init__.py  hook_manager.py
neural_observatory/reporting/: __init__.py  base.py  console_report.py  html_report.py  json_report.py
neural_observatory/storage/: __init__.py  memory_store.py  sqlite_store.py
tests/: conftest.py  test_advanced_analyzers.py  test_analyzers.py  test_packaging.py  test_reporting.py  test_step_propagation.py  test_storage_and_misc_fixes.py  test_tensor_memory_safety.py
