[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-observatory"
version = "0.1.0b1"
description = "Neural network observability toolkit for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0"
]

[tool.setuptools]
packages = ["neural_observatory"]

[project.urls]
"Source" = "https://github.com/omidNomiri/Neural_Observatory"