[project]
name = "neural-observatory"
version = "0.1.0b1"
description = "Neural network observability toolkit for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Omid Nomiri", email = "omidnomiri@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.setuptools]
packages = ["neural_observatory"]

[project.urls]
"Source" = "https://github.com/omidNomiri/Neural_Observatory"